test/files/neg/ambiguous-float-dots2.scala
class A {
  val x0 = 5.
}

class B {
  val x1 = 5.f
}

class D {
  1.+(2)
  1. + 2
  1 + 2
}
